# Agent-Trade

./: .gitignore  README.md
app/web/: package.json  pnpm-lock.yaml
app/web/src/app/: globals.css  layout.tsx  page.tsx
app/web/src/app/ai-signals/: page.tsx
app/web/src/app/meme/: page.tsx
app/web/src/components/: ai-signals-tab.tsx  footer.tsx  header.tsx  heat-chart.tsx  meme-tab.tsx  notification-banner.tsx  token-avatar.tsx
app/web/src/data/: mockData.json
server/: .gitignore  Cargo.toml  bitquery_result.json  todo.txt
server/examples/: agent_with_transfer.rs
server/src/: lib.rs  main.rs  server.rs  utils.rs
server/src/contracts/: abi.rs  calculator.rs  common.rs  erc20.rs  eth.rs  gen_tools.rs  mod.rs  swap.rs  uniswap.rs
server/src/service/: mod.rs
server/src/service/data/: analyze.rs  mod.rs
server/src/service/data/dex/: pumpportal.rs  raydium.rs
server/src/service/data/pre_process/: analyze.rs
server/src/service/data/provider/: bitquery.rs  mod.rs
server/src/service/dex/: mod.rs  pumpportal.rs
server/src/service/openrouter/: mod.rs  preamble.rs
server/src/service/sns/: heurist.json  heurist_mesh.rs  mod.rs
server/src/service/token/: solana-ai-signal.json  solana-meme.json  solana.rs  solana_token_test.rs
server/src/tools/: assets.rs  mod.rs  swap.rs  transfer.rs
server/src/wallets/: eip7702.rs  local.rs  mod.rs
server/tests/: calculator.rs
