[package]
name = "agent-trade"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
uniswap-v3-sdk = { version = "4.0.0", features = ["extensions", "std"] }
uniswap-sdk-core = "4.0.0"

# rig-core = { version = "0.11.0", features = ["derive"] }
# rig-derive = "0.1.1"
# rig-core = { git = "https://github.com/0xPlaygrounds/rig.git", branch = "main" }
# rig-derive = { git = "https://github.com/0xPlaygrounds/rig.git", branch = "main" }

rig-core = { git = "https://github.com/anylots/rig.git", branch = "dev", features = ["derive"] }  
rig-derive = { git = "https://github.com/anylots/rig.git", branch = "dev" }

tokio = { version = "1.42.0", features = ["full"] }
alloy = { version = "0.12", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
once_cell = "1.20.2"
log = "0.4"
dotenv = "0.15.0"
env_logger = "0.9"
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }  
ureq = { version = "2.9", features = ["json", "tls"] }  

tokio-tungstenite = { version = "0.18", features = ["native-tls"] }  
url = "2.3"  
sled = "0.34.7"
chrono = "0.4"
